--- a/GrabKeyLib/CMakeLists.txt
+++ b/GrabKeyLib/CMakeLists.txt
@@ -2,5 +2,10 @@ cmake_minimum_required(VERSION 3.12.0)
 
 project(grabkeylib)
 
+set(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR}/bin)
+set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
+set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
+
 add_subdirectory(grabkey)
 add_subdirectory(grabkeypp)
