Improve installaition place cmake files separately add readme notes

--- a/GrabKeyLib/grabkey/CMakeLists.txt
+++ b/GrabKeyLib/grabkey/CMakeLists.txt
@@ -29,13 +29,13 @@ target_include_directories(grabkey PUBLIC "include")
 
 set(INCLUDE_INSTALL_DIR "include/grabkey/")
 set(LIBRARY_INSTALL_DIR "lib/grabkey/")
-set(INSTALL_DESTINATION_DIR "${LIBRARY_INSTALL_DIR}/cmake")
+set(CMAKE_DESTINATION_DIR "cmake")
 
 include(CMakePackageConfigHelpers)
 
 configure_package_config_file(GrabKeyConfig.cmake.in
   ${CMAKE_CURRENT_BINARY_DIR}/GrabKeyConfig.cmake
-  INSTALL_DESTINATION ${INSTALL_DESTINATION_DIR}
+  INSTALL_DESTINATION ${CMAKE_DESTINATION_DIR}
   PATH_VARS INCLUDE_INSTALL_DIR LIBRARY_INSTALL_DIR)
 
 write_basic_package_version_file(
@@ -47,4 +47,4 @@ install(TARGETS grabkey DESTINATION ${LIBRARY_INSTALL_DIR})
 install(FILES ${HEADERS} DESTINATION ${INCLUDE_INSTALL_DIR}/grabkey)
 install(FILES ${CMAKE_CURRENT_BINARY_DIR}/GrabKeyConfig.cmake
               ${CMAKE_CURRENT_BINARY_DIR}/GrabKeyConfigVersion.cmake
-        DESTINATION ${INSTALL_DESTINATION_DIR})
+        DESTINATION ${CMAKE_DESTINATION_DIR})
