Packaging first version

--- a/GrabKeyLib/CMakeLists.txt
+++ b/GrabKeyLib/CMakeLists.txt
@@ -9,3 +9,12 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 
 add_subdirectory(grabkey)
 add_subdirectory(grabkeypp)
+
+include(InstallRequiredSystemLibraries)
+#set(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_CURRENT_SOURCE_DIR}/License.txt")
+set(CPACK_PROJECT_NAME ${PROJECT_NAME})
+set(CPACK_PACKAGE_FILE_NAME "GrabKey")
+set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
+set(CPACK_SOURCE_GENERATOR "TGZ")
+set(CPACK_ARCHIVE_COMPONENT_INSTALL ON)
+include(CPack)
